# dispute

./: .gitignore  .gitmodules  CMakeLists.txt
include/dispute/: dispute.h
source/: flag.cpp  flag_filter.cpp  format_string.cpp
test/: dispute_test.cpp
